Combining backface-visibility:hidden and backdrop-filter stops the backface from being hidden. https://bugs.webkit.org/show_bug.cgi?id=249952 <rdar://103940530>

Reviewed by Simon Fraser.

Structural layers created for backdrop-filter should still have the double sided property set.

* LayoutTests/css3/filters/backdrop/backdrop-filter-with-backface-visibility-expected.html: Added.
* LayoutTests/css3/filters/backdrop/backdrop-filter-with-backface-visibility.html: Added.
* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::updateBackfaceVisibility):

Canonical link: https://commits.webkit.org/268427@main